jlamontSC-test/src/objects/Event_Leader__c.object
<CustomObject>
    <fields>
        <fullName>Advocacy_Action_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advocacy Action Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Leaders</relationshipLabel>
        <relationshipName>Event_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Event</label>
        <referenceTo>Club_Event__c</referenceTo>
        <relationshipLabel>Event Leaders</relationshipLabel>
        <relationshipName>Event_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Leaders</relationshipLabel>
        <relationshipName>Event_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <description>The Campaign&apos;s Event Category, for layout purposes.</description>
        <formula>TEXT(Campaign__r.Events_Category__c)</formula>
        <label>Event Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Club_Entity__c</fullName>
        <description>The Campaign&apos;s Event&apos;s Club Entity Name, for layout purposes.</description>
        <formula>Campaign__r.Club_Entity__r.Name</formula>
        <label>Event Club Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>The Campaign&apos;s Event Name, for layout purposes.</description>
        <formula>Campaign__r.Event_Name__c</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>The Campaign&apos;s Start Date, for layout purposes.</description>
        <formula>Campaign__r.Start_Date__c</formula>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <description>The Campaign&apos;s Start Time, for layout purposes.</description>
        <formula>Campaign__r.Start_Time__c</formula>
        <label>Event Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Custom Campaign Status field, specific to events.</description>
        <formula>TEXT(Campaign__r.Status__c)</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>The Campaign&apos;s Event Type, for layout purposes.</description>
        <formula>TEXT(Campaign__r.Events_Type__c)</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Leader?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Timestamp__c</fullName>
        <description>For reportability of Last Modified Date &amp; Time.</description>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leader_Name__c</fullName>
        <label>Leader Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_or_Other_Contact_Information__c</fullName>
        <inlineHelpText>Add a phone number and/or email address that will be publicly displayed on the Event Details page</inlineHelpText>
        <label>Phone or Other Contact Information</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringEventId__c</fullName>
        <formula>Club_Event__r.RecurringEvent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecurringEventId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringEventLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecurringEventLeader</label>
        <referenceTo>RecurringEventLeader__c</referenceTo>
        <relationshipLabel>Event Leaders</relationshipLabel>
        <relationshipName>Event_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Leader</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Event Leader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Leaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>